# lis2

./: .buildinfo  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Concepts.html  LICENSE  Pipfile  Quickstart.html  README.md  controller.html  data_augmentation.html  early_stop.html  environment.yml  genindex.html  index.html  loss.html  main_preprocessing.py  main_t.py  main_t_d.py  main_train.py  objects.inv  optimizer.html  preprocessing.html  py-modindex.html  pyproject.toml  requirements.txt  scheduler.html  search.html  searchindex.js  segmentation.py  segmenter.html  setup.cfg  setup.py  skeletons.html  trackers.html  trainer.html  training_k_fold.py  training_pipeline.html
.github/workflows/: gh-pages.yml  python-package.yml
PNRIA/: README.md  cross_val.py  dataset.py  logger.py  main_k_fold.py  main_preprocessing.py  main_t.py  main_t_d.py  main_train.py  run_training.py  sementation.py  training_k_fold.py
PNRIA/.ipynb_checkpoints/: main_test-checkpoint.ipynb
PNRIA/configs/: config.py  config_dataset_test.yaml  config_kfolds.yaml  config_model_unet.yml  config_preprocessing.yml  config_train_a.yml  config_training.yaml  config_training3D.yaml
PNRIA/sample_merged/: indices.pkl  sample_target.fits
PNRIA/scripts/: cross_validation.py
PNRIA/tests/: test_1_preprocessing.py  test_2_foldscontroller.py  test_3_dataset.py  test_4_pipeline.py  test_complex_config_module.py  (+1 more)
_modules/: index.html
_sources/: preprocessing.rst.txt
configs/: __init__.py  config.py  config_clustering.yaml  config_clustering2.yaml  config_dataset_test.yaml  config_gridsearch.yml  config_infer.yml  config_kfolds.yaml  config_kfolds.yml  config_model_unet.yml  config_mosaic.yml  config_no_controller.yml  config_preprocess.yml  config_training.yaml  config_training.yml  config_training3D.yaml  config_training3D.yml
core/: __init__.py  controller.py  early_stop.py  loss.py  metrics.py  optim.py  pipeline.py  preprocessing.py  scheduler.py  segmenter.py  trackers.py  trainer.py
datasets/: __init__.py  dataset.py  fakeData3d.py
docs/: pipeline_description.md
lis2/: __init__.py  early_stop.py  loss.py  optimizer.py  pipeline.py  preprocessing.py  scheduler.py  segmenter.py  trackers.py  trainer.py
models/: __init__.py  base_unet.py  cnn1d.py  custom_model.py  dncnn.py  unetpp.py  vgg1d.py  vnet.py
modules/: datasets.html  metrics.html  models.html  utils.html
notebooks/: Metric_analysis.ipynb  article.py  kfold_stats.py  random_k-fold.ipynb  statistics.ipynb
sample_merged/: sample_background.fits  sample_image.fits  sample_missing.fits
scripts/: 1D_training.py  MSSIM_test.py  band_analysis.py  compare_segmentation.py  create_background_maps.py  create_dataset.py  create_missing_data_map.py  cube_exploration.py  extract_fits_from_simulations.py  k-fold_position_distribution.py  k-folds_create_datasets.py  k-folds_model_training.py  k-folds_segmentation.py  k-folds_segmentation_pipline.py  k-folds_statistics.py  main_build_mosaic.py  main_cube_skeletonize.py  main_gridsearch.py  main_preprocessing.py  main_segmentation.py  main_train.py  main_training_k_fold.py  main_training_k_folds.py  model_training.py  mosaics_building.py  read_kfold_statistics.py  read_learning_perf.py  read_segmentation_perf.py  segmentation.py  structure_extraction.py  test.ipynb
src/: __init__.py  controller.py  early_stop.py  loss.py  metrics.py  optimizer.py  pipeline.py  preprocessing.py  scheduler.py  segmenter.py  trackers.py  trainer.py
torch_c/: __init__.py  controller.py  dataset.py  early_stop.py  encoder.py  fakeData3d.py  pipeline.py  scheduler.py  segmenter.py  trackers.py  trainer.py
utils/: logger.py  preprocessing.py
(+248 files in other folders)
